--- a/index.html
+++ b/index.html
@@ -16,10 +16,358 @@
   </head>
   <body>
     <!-- Add your site or application content here -->
-    <h1 class="text-5xl text-center font-semibold pt-20">
-      Hello world! Write your content here.
-    </h1>
-
+    <div class="container mx-auto my-40 w-fit">
+      <div class="flex flex-col min-h-screen gap-[48px]">
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-indigo-700 rounded-[4px] py-[10px] px-[14px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-indigo-700 rounded-[4px] py-[10px] px-[16px] text-white flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-1-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-indigo-700 rounded-[4px] py-[12px] px-[20px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-1-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-indigo-700 rounded-[4px] py-[16px] px-[24px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-indigo-700 rounded-[4px] py-[16px] px-[16px] text-white flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-1-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[10px] px-[14px] text-neutral-900 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[10px] px-[16px] text-neutral-900 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-2-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[12px] px-[20px] text-neutral-900 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-2-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[16px] px-[24px] text-neutral-900 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[16px] px-[16px] text-neutral-900 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-2-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-white py-[10px] px-[14px] text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-[10px] px-[16px] text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-3-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-[12px] px-[20px] text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-3-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-white py-[16px] px-[24px] text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-[16px] px-[16px] text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-3-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-4-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-4-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-4-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-5-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-4-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-5-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+        <div
+          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+        >
+          <button
+            class="bg-red-600 rounded-[4px] py-[10px] px-[14px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-red-600 rounded-[4px] py-[10px] px-[16px] text-white flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-6-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-red-600 rounded-[4px] py-[12px] px-[20px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              >Button CTA</span
+            >
+            <img
+              src="./icons/button-6-icon.svg"
+              alt="button end icon"
+              width="20"
+              height="20"
+            />
+          </button>
+          <button
+            class="bg-red-600 rounded-[4px] py-[16px] px-[24px] text-white flex flex-row gap-[6px]"
+          >
+            <span
+              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              >Button CTA</span
+            >
+          </button>
+          <button
+            class="bg-red-600 rounded-[4px] py-[16px] px-[16px] text-white flex flex-row gap-[6px]"
+          >
+            <img
+              src="./icons/button-6-icon.svg"
+              alt="button end icon"
+              width="24"
+              height="24"
+            />
+          </button>
+        </div>
+      </div>
+    </div>
     <!-- Attribute this challenge to yourself! -->
     <div class="credits">
       A challenge by
