--- a/index.html
+++ b/index.html
@@ -376,7 +376,9 @@
         target="_blank"
         >GreatFrontEnd Projects</a
       >. Built by
-      <a href="https://www.greatfrontend.com/u/your_username" target="_blank"
+      <a
+        href="https://www.greatfrontend.com/projects/u/abhijit105"
+        target="_blank"
         >Abhijit Kumar</a
       >.
     </div>
