--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
   <body>
     <!-- Add your site or application content here -->
     <div class="container mx-auto my-32 w-fit">
-      <div class="flex flex-col min-h-screen gap-[48px]">
+      <div class="flex flex-col min-h-screen gap-main">
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-indigo-700 rounded-[4px] py-[10px] px-[14px] text-white flex flex-row gap-[6px]"
+            class="bg-indigo-700 rounded-default py-xs px-md text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-[4px] py-[10px] px-[16px] text-white flex flex-row gap-[6px]"
+            class="bg-indigo-700 rounded-default py-xs px-lg text-white flex flex-row gap-btn"
           >
             <img
               src="./icons/button-1-icon.svg"
@@ -39,15 +39,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-[4px] py-[12px] px-[20px] text-white flex flex-row gap-[6px]"
+            class="bg-indigo-700 rounded-default py-md px-2xl text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -58,15 +58,15 @@
             />
           </button>
           <button
-            class="bg-indigo-700 rounded-[4px] py-[16px] px-[24px] text-white flex flex-row gap-[6px]"
+            class="bg-indigo-700 rounded-default py-lg px-3xl text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-[4px] py-[16px] px-[16px] text-white flex flex-row gap-[6px]"
+            class="bg-indigo-700 rounded-default py-lg px-lg text-white flex flex-row gap-btn"
           >
             <img
               src="./icons/button-1-icon.svg"
@@ -77,18 +77,18 @@
           </button>
         </div>
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[10px] px-[14px] text-neutral-900 flex flex-row gap-[6px]"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-xs px-md text-neutral-900 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[10px] px-[16px] text-neutral-900 flex flex-row gap-[6px]"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-xs px-lg text-neutral-900 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-2-icon.svg"
@@ -97,15 +97,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[12px] px-[20px] text-neutral-900 flex flex-row gap-[6px]"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-md px-2xl text-neutral-900 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -116,15 +116,15 @@
             />
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[16px] px-[24px] text-neutral-900 flex flex-row gap-[6px]"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-lg px-3xl text-neutral-900 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-[4px] py-[16px] px-[16px] text-neutral-900 flex flex-row gap-[6px]"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-lg px-lg text-neutral-900 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-2-icon.svg"
@@ -135,18 +135,18 @@
           </button>
         </div>
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-white py-[10px] px-[14px] text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-xs px-md text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-[10px] px-[16px] text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-xs px-lg text-indigo-700 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-3-icon.svg"
@@ -155,15 +155,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-[12px] px-[20px] text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-md px-2xl text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -174,15 +174,15 @@
             />
           </button>
           <button
-            class="bg-white py-[16px] px-[24px] text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-lg px-3xl text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-[16px] px-[16px] text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-lg px-lg text-indigo-700 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-3-icon.svg"
@@ -193,18 +193,18 @@
           </button>
         </div>
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-4-icon.svg"
@@ -213,15 +213,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -232,15 +232,15 @@
             />
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-4-icon.svg"
@@ -251,18 +251,18 @@
           </button>
         </div>
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-5-icon.svg"
@@ -271,15 +271,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -290,15 +290,15 @@
             />
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-[6px]"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
           >
             <img
               src="./icons/button-5-icon.svg"
@@ -309,18 +309,18 @@
           </button>
         </div>
         <div
-          class="flex flex-row items-center justify-start gap-[20px] flex-wrap"
+          class="flex flex-row items-center justify-start gap-list flex-wrap"
         >
           <button
-            class="bg-red-600 rounded-[4px] py-[10px] px-[14px] text-white flex flex-row gap-[6px]"
+            class="bg-red-600 rounded-[4px] py-xs px-md text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[14px] leading-[var(--line-md)]"
+              class="font-default font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-[10px] px-[16px] text-white flex flex-row gap-[6px]"
+            class="bg-red-600 rounded-[4px] py-xs px-lg text-white flex flex-row gap-btn"
           >
             <img
               src="./icons/button-6-icon.svg"
@@ -329,15 +329,15 @@
               height="20"
             />
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)]"
+              class="font-default font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-[12px] px-[20px] text-white flex flex-row gap-[6px]"
+            class="bg-red-600 rounded-[4px] py-md px-2xl text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[16px] leading-[var(--line-lg)] flex flex-row gap-[6px]"
+              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
               >Button CTA</span
             >
             <img
@@ -348,15 +348,15 @@
             />
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-[16px] px-[24px] text-white flex flex-row gap-[6px]"
+            class="bg-red-600 rounded-[4px] py-lg px-3xl text-white flex flex-row gap-btn"
           >
             <span
-              class="font-[Noto Sans] font-medium text-[18px] leading-[var(--line-xl)]"
+              class="font-default font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-[16px] px-[16px] text-white flex flex-row gap-[6px]"
+            class="bg-red-600 rounded-[4px] py-lg px-lg text-white flex flex-row gap-btn"
           >
             <img
               src="./icons/button-6-icon.svg"
