fix: use tailwind classes instead of theme variables

--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
   <body>
     <!-- Add your site or application content here -->
     <div class="container mx-auto my-32 w-fit">
-      <div class="flex flex-col min-h-screen gap-main">
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+      <div class="flex flex-col min-h-screen gap-12">
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-indigo-700 rounded-default py-xs px-md text-white flex flex-row gap-btn"
+            class="bg-indigo-700 rounded-sm py-2 px-4 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-default py-xs px-lg text-white flex flex-row gap-btn"
+            class="bg-indigo-700 rounded-sm py-2 px-4 text-white flex flex-row gap-4"
           >
             <img
               src="./icons/button-1-icon.svg"
@@ -39,15 +37,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-default py-md px-2xl text-white flex flex-row gap-btn"
+            class="bg-indigo-700 rounded-sm py-3 px-6 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -58,15 +56,15 @@
             />
           </button>
           <button
-            class="bg-indigo-700 rounded-default py-lg px-3xl text-white flex flex-row gap-btn"
+            class="bg-indigo-700 rounded-sm py-4 px-8 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-indigo-700 rounded-default py-lg px-lg text-white flex flex-row gap-btn"
+            class="bg-indigo-700 rounded-sm py-4 px-4 text-white flex flex-row gap-4"
           >
             <img
               src="./icons/button-1-icon.svg"
@@ -76,19 +74,17 @@
             />
           </button>
         </div>
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-xs px-md text-neutral-900 flex flex-row gap-btn"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-sm py-2 px-4 text-neutral-900 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-xs px-lg text-neutral-900 flex flex-row gap-btn"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-sm py-2 px-4 text-neutral-900 flex flex-row gap-4"
           >
             <img
               src="./icons/button-2-icon.svg"
@@ -97,15 +93,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-md px-2xl text-neutral-900 flex flex-row gap-btn"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-sm py-3 px-6 text-neutral-900 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -116,15 +112,15 @@
             />
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-lg px-3xl text-neutral-900 flex flex-row gap-btn"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-sm py-4 px-8 text-neutral-900 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white border-neutral-200 border-[0.5px] rounded-default py-lg px-lg text-neutral-900 flex flex-row gap-btn"
+            class="bg-white border-neutral-200 border-[0.5px] rounded-sm py-4 px-4 text-neutral-900 flex flex-row gap-4"
           >
             <img
               src="./icons/button-2-icon.svg"
@@ -134,19 +130,17 @@
             />
           </button>
         </div>
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-white py-xs px-md text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-2 px-4 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-xs px-lg text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-2 px-4 text-indigo-700 flex flex-row gap-4"
           >
             <img
               src="./icons/button-3-icon.svg"
@@ -155,15 +149,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-md px-2xl text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-3 px-6 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -174,15 +168,15 @@
             />
           </button>
           <button
-            class="bg-white py-lg px-3xl text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-4 px-8 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-lg px-lg text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-4 px-4 text-indigo-700 flex flex-row gap-4"
           >
             <img
               src="./icons/button-3-icon.svg"
@@ -192,19 +186,17 @@
             />
           </button>
         </div>
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-4"
           >
             <img
               src="./icons/button-4-icon.svg"
@@ -213,15 +205,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -232,15 +224,15 @@
             />
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-indigo-700 flex flex-row gap-4"
           >
             <img
               src="./icons/button-4-icon.svg"
@@ -250,19 +242,17 @@
             />
           </button>
         </div>
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-4"
           >
             <img
               src="./icons/button-5-icon.svg"
@@ -271,15 +261,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -290,15 +280,15 @@
             />
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-btn"
+            class="bg-white py-0 px-0 text-neutral-600 flex flex-row gap-4"
           >
             <img
               src="./icons/button-5-icon.svg"
@@ -308,19 +298,17 @@
             />
           </button>
         </div>
-        <div
-          class="flex flex-row items-center justify-start gap-list flex-wrap"
-        >
+        <div class="flex flex-row items-center justify-start gap-8 flex-wrap">
           <button
-            class="bg-red-600 rounded-[4px] py-xs px-md text-white flex flex-row gap-btn"
+            class="bg-red-600 rounded-[4px] py-2 px-4 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-sm leading-[var(--line-md)]"
+              class="font-['Noto Sans'] font-medium text-sm leading-[var(--line-md)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-xs px-lg text-white flex flex-row gap-btn"
+            class="bg-red-600 rounded-[4px] py-2 px-4 text-white flex flex-row gap-4"
           >
             <img
               src="./icons/button-6-icon.svg"
@@ -329,15 +317,15 @@
               height="20"
             />
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)]"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-md px-2xl text-white flex flex-row gap-btn"
+            class="bg-red-600 rounded-[4px] py-3 px-6 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-md leading-[var(--line-lg)] flex flex-row gap-btn"
+              class="font-['Noto Sans'] font-medium text-md leading-[var(--line-lg)] flex flex-row gap-4"
               >Button CTA</span
             >
             <img
@@ -348,15 +336,15 @@
             />
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-lg px-3xl text-white flex flex-row gap-btn"
+            class="bg-red-600 rounded-[4px] py-4 px-8 text-white flex flex-row gap-4"
           >
             <span
-              class="font-default font-medium text-lg leading-[var(--line-xl)]"
+              class="font-['Noto Sans'] font-medium text-lg leading-[var(--line-xl)]"
               >Button CTA</span
             >
           </button>
           <button
-            class="bg-red-600 rounded-[4px] py-lg px-lg text-white flex flex-row gap-btn"
+            class="bg-red-600 rounded-[4px] py-4 px-4 text-white flex flex-row gap-4"
           >
             <img
               src="./icons/button-6-icon.svg"
